Fix NavBar, Tweak Colors, Fix Icon Color, Change ScrollBar

--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,9 @@
 @media screen {
     
 }
-
+html{
+    scroll-behavior: smooth;
+}
 body {
     display: flex;
     flex-direction: column;
@@ -15,21 +17,19 @@ body {
     background-attachment: fixed;
     justify-content: center;
 }
-
-.foreground{
-    margin-top: 2rem;
-    margin-bottom: 2rem;
-    margin-right: 3rem;
-    margin-left: 3rem;
-    background-color: black;
-    border-radius: 5rem;
-    justify-content: center;
-    opacity: 0.8;
-} 
+.navbar{
+    margin: 0;
+    padding: 0;
+}
 .bar{
-    position: static;
+    height: fit-content;
+    position: fixed;
+    z-index: 99;
+    height: fit-content;
+    width: 100%;
     display: flex;
     background-color: rgb(29, 29, 29);
+    opacity: 0.95;
     justify-content: space-between;
 }
 .bar img{
@@ -37,6 +37,7 @@ body {
     margin-left: 1rem;
 }
 .bar .nav ul {
+    margin: 0.8rem;
     display: flex;
     list-style: none;
 }
@@ -46,6 +47,9 @@ body {
     font-family: "Ubuntu";
     padding: 2rem;
     text-decoration: none;
+}
+.bar .drop img {
+    filter: invert(100%) sepia(2%) saturate(0%) hue-rotate(201deg) brightness(104%) contrast(100%);
 }
 .bar .nav li a:hover{
     color: yellow;
@@ -70,8 +74,40 @@ body {
     padding-top: 1rem;
     padding-bottom: 1rem;
 }
+.bar .nav img{
+    transform: rotate(90deg);
+}
 .drop:hover .menu{
     display: block;
+}
+.drop:hover img{
+    filter: invert(99%) sepia(100%) saturate(7494%) hue-rotate(359deg) brightness(100%) contrast(102%);
+    transform: rotate(180deg);
+}
+
+.foreground{
+    margin-top: 2rem;
+    margin-bottom: 4rem;
+    margin-right: 3rem;
+    margin-left: 3rem;
+    background-color: black;
+    border-radius: 5rem;
+    justify-content: center;
+    opacity: 0.8;
+}
+
+::-webkit-scrollbar{
+    width: 0.65rem;
+}
+::-webkit-scrollbar-thumb{
+    background: gainsboro;
+    border-radius: 2rem;
+}
+::-webkit-scrollbar-thumb:hover{
+    background: grey;
+}
+::-webkit-scrollbar-track{
+    background: transparent;
 }
 
 .content{
@@ -88,7 +124,7 @@ body {
     margin: 2rem;
     margin-top: 5rem;
     text-align: center;
-    color: white;
+    color: rgb(255, 0, 106);
     font-family: "Roboto Mono";
 }
 .name {
@@ -123,7 +159,7 @@ body {
     justify-content: center;
 }
 .greeting {
-    margin-top: 9rem;
+    margin-top: 13rem;
     margin-left: 15rem;
     margin-right: 15rem;
     width: 25rem;
@@ -165,29 +201,36 @@ span {
     color: yellow;
 }
 
-#about{
+.about{
+    padding: 0.5rem;
     display: flexbox;
     justify-content: center;
 }
-#about article{
+.about article{
     margin-left: 5rem;
     margin-right: 5rem;
     padding: 1.5rem;
-    text-align: center;
+    text-align: justify;
 }
 
-#projects article{
+.projects article{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     padding: 1rem;
 }
-#projects article header{
+.projects article header{
     margin-top: 1rem;
     font-size: 2rem;
     color: rgb(255, 0, 106);    
 }
+#symphony-before, #philanthrobid-before, #blockscore-before{
+    padding-top: 3.5rem;
+    padding-left: 0.5rem;
+    padding-right: 0,5rem;
+}
 #symphony, #philanthrobid, #blockscore{
+    padding: 0.5rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -201,7 +244,7 @@ span {
     box-shadow: 0.01rem 0.01rem 0.6rem 0.01rem white;
     align-items: center;
 }
-#projects a{
+.projects a{
     background-color: white;
     color: black;
     text-decoration: none;
@@ -213,22 +256,23 @@ span {
     width:fit-content;
     padding: 0.8rem;
 }
-#projects a img{
+.projects a img{
     transform: scale(1.3);
     margin-right: 1rem;
 }
-#projects a:hover{
+.projects a:hover{
     background-color:yellow;
     box-shadow: 0.1rem 0.1rem 0.8rem white;
 }
-#contact{
+.contact{
     display: flex;
     flex-direction: column;
     justify-content: center;
     margin-left: 5rem;
     margin-right: 5rem;
+    margin-bottom: 5rem;
 }
-#contact input, #message{
+.contact input, #message{
     font-size: 0.9rem;
     width: 100%;
     height: 2rem;
@@ -240,12 +284,12 @@ span {
     border: none;
     outline: none;
 }
-#contact #message{
+.contact #message{
     height: 10rem;
     text-align: top;
     resize: none;
 }
-#contact #submit{
+.contact #submit{
     margin-bottom: 2rem;
     text-align: center;
     color: white;
@@ -258,7 +302,7 @@ span {
     width: 5rem;
     float: right;
 }
-#contact #submit:hover{
+.contact #submit:hover{
     background-color: rgb(14, 85, 0);
     cursor: pointer;
 }
@@ -300,11 +344,14 @@ footer a img{
     margin: 1rem;
 }
 footer a{
-    color:rgb(89,66,255);
+    color:yellow;
     text-decoration: none;
 }
 footer a:hover{
     text-decoration: underline;
     cursor: pointer;
+}
+.footer img {
+    filter: invert(100%) sepia(2%) saturate(0%) hue-rotate(201deg) brightness(104%) contrast(100%);
 }
 
